# programming-exercise-c-1

./: .gitignore  CMakeLists.txt  bench-results.txt  deps.txt
c/: CMakeLists.txt  generate.sh
c/ext/: CMakeLists.txt  google-benchmark
c/src/: bench.cpp  normalize.c  test.cpp
ext/: google-benchmark
java/: bench.sh  pom.xml  results-avgt.csv  results-thrpt.csv
java/normalize/: pom.xml
java/normalize-bench/: pom.xml
java/normalize-bench/src/main/java/com/github/asamolov/: NormalizeBenchmark.java
java/normalize/src/main/java/com/github/asamolov/: App.java  PathUtils.java
java/normalize/src/test/java/com/github/asamolov/: AppTest.java  PathUtilsTest.java
src/: normalize.c  normalize.h
